@@ -22,7 +22,6 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.syncope.client.console.commons.DirectoryDataProvider;
 import org.apache.syncope.client.console.commons.IdMConstants;
@@ -283,7 +282,7 @@ public class ResourceStatusDirectoryPanel
                 statusBeans.addAll(result.stream().map(any -> StatusUtils.getStatusBean(any,
                         resource.getKey(),
                         null,
-                        any instanceof GroupTO)).collect(Collectors.toList()));
+                        any instanceof GroupTO)).toList());
             }
 
             return statusBeans;
