@@ -126,7 +126,6 @@ public class MergeLinkedAccountsReviewPanel extends WizardStep {
                                 .username(acct.getUsername())
                                 .build();
                 linkedAccount.getPlainAttrs().addAll(acct.getPlainAttrs());
-                linkedAccount.getPrivileges().addAll(acct.getPrivileges());
                 return linkedAccount;
             }).collect(Collectors.toList());
 
@@ -135,7 +134,7 @@ public class MergeLinkedAccountsReviewPanel extends WizardStep {
                 String connObjectKeyValue = restClient.getConnObjectKeyValue(resource,
                         mergingUser.getType(), mergingUser.getKey());
                 return new LinkedAccountTO.Builder(resource, connObjectKeyValue).build();
-            }).collect(Collectors.toList()));
+            }).toList());
 
             // Move merging user into target/base user as a linked account
             String connObjectKeyValue = restClient.getConnObjectKeyValue(
@@ -148,7 +147,6 @@ public class MergeLinkedAccountsReviewPanel extends WizardStep {
                             .username(mergingUser.getUsername())
                             .build();
             linkedAccount.getPlainAttrs().addAll(mergingUser.getPlainAttrs());
-            linkedAccount.getPrivileges().addAll(mergingUser.getPrivileges());
             accounts.add(linkedAccount);
 
             return accounts;
