@@ -24,9 +24,11 @@ import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.Pair;
+import org.apache.syncope.client.console.SyncopeConsoleSession;
 import org.apache.syncope.client.console.SyncopeWebApplication;
 import org.apache.syncope.client.console.commons.ITabComponent;
 import org.apache.syncope.client.console.layout.AnyLayout;
@@ -40,7 +42,6 @@ import org.apache.syncope.client.console.wizards.any.ConnObjectPanel;
 import org.apache.syncope.client.ui.commons.ConnIdSpecialName;
 import org.apache.syncope.client.ui.commons.Constants;
 import org.apache.syncope.client.ui.commons.status.StatusUtils;
-import org.apache.syncope.common.lib.SyncopeConstants;
 import org.apache.syncope.common.lib.to.AnyTypeTO;
 import org.apache.syncope.common.lib.to.ConnObject;
 import org.apache.syncope.common.lib.to.PropagationStatus;
@@ -55,7 +56,6 @@ import org.apache.wicket.extensions.markup.html.tabs.ITab;
 import org.apache.wicket.markup.html.WebMarkupContainer;
 import org.apache.wicket.markup.html.basic.Label;
 import org.apache.wicket.markup.html.panel.Panel;
-import org.apache.wicket.model.IModel;
 import org.apache.wicket.model.ResourceModel;
 import org.apache.wicket.spring.injection.annot.SpringBean;
 import org.slf4j.Logger;
@@ -150,7 +150,7 @@ public abstract class Realm extends WizardMgtPanel<RealmTO> {
     @Override
     @SuppressWarnings("unchecked")
     protected Panel customResultBody(final String panelId, final RealmTO item, final Serializable result) {
-        if (!(result instanceof ProvisioningResult)) {
+        if (!(result instanceof final ProvisioningResult provisioningResult)) {
             throw new IllegalStateException("Unsupported result type");
         }
 
@@ -163,7 +163,7 @@ public abstract class Realm extends WizardMgtPanel<RealmTO> {
 
         List<PropagationStatus> propagations = new ArrayList<>();
         propagations.add(syncope);
-        propagations.addAll(((ProvisioningResult) result).getPropagationStatuses());
+        propagations.addAll(provisioningResult.getPropagationStatuses());
 
         ListViewPanel.Builder<PropagationStatus> builder =
                 new ListViewPanel.Builder<>(PropagationStatus.class, pageRef) {
@@ -175,7 +175,7 @@ public abstract class Realm extends WizardMgtPanel<RealmTO> {
                 if ("afterObj".equalsIgnoreCase(key)) {
                     String remoteId = Optional.ofNullable(bean.getAfterObj()).
                             flatMap(afterObj -> afterObj.getAttr(ConnIdSpecialName.NAME).
-                            filter(s -> !s.getValues().isEmpty()).map(s -> s.getValues().get(0))).
+                            filter(s -> !s.getValues().isEmpty()).map(s -> s.getValues().getFirst())).
                             orElse(StringUtils.EMPTY);
 
                     return new Label("field", remoteId);
@@ -250,7 +250,7 @@ public abstract class Realm extends WizardMgtPanel<RealmTO> {
             this.bean = bean;
             add(new ConnObjectPanel(
                     REMOTE_OBJECT_PANEL_ID,
-                    Pair.<IModel<?>, IModel<?>>of(new ResourceModel("before"), new ResourceModel("after")),
+                    Pair.of(new ResourceModel("before"), new ResourceModel("after")),
                     getConnObjectTOs(),
                     false));
         }
@@ -273,47 +273,58 @@ public abstract class Realm extends WizardMgtPanel<RealmTO> {
         @Override
         public Panel getPanel(final String panelId) {
             ActionsPanel<RealmTO> actionPanel = new ActionsPanel<>("actions", null);
+            if (securityCheck(Set.of(
+                    IdRepoEntitlement.REALM_CREATE,
+                    IdRepoEntitlement.REALM_UPDATE,
+                    IdRepoEntitlement.REALM_DELETE))) {
 
-            if (StringUtils.startsWith(realmTO.getFullPath(), SyncopeConstants.ROOT_REALM)) {
-                actionPanel.add(new ActionLink<>(realmTO) {
+                if (securityCheck(Set.of(IdRepoEntitlement.REALM_CREATE))) {
+                    actionPanel.add(new ActionLink<>(realmTO) {
 
-                    private static final long serialVersionUID = 2802988981431379827L;
+                        private static final long serialVersionUID = 2802988981431379827L;
 
-                    @Override
-                    public void onClick(final AjaxRequestTarget target, final RealmTO ignore) {
-                        onClickCreate(target);
-                    }
-                }, ActionLink.ActionType.CREATE, IdRepoEntitlement.REALM_CREATE).hideLabel();
+                        @Override
+                        public void onClick(final AjaxRequestTarget target, final RealmTO ignore) {
+                            onClickCreate(target);
+                        }
+                    }, ActionLink.ActionType.CREATE, IdRepoEntitlement.REALM_CREATE).hideLabel();
+                }
 
-                actionPanel.add(new ActionLink<>(realmTO) {
+                if (securityCheck(Set.of(IdRepoEntitlement.REALM_UPDATE))) {
+                    actionPanel.add(new ActionLink<>(realmTO) {
 
-                    private static final long serialVersionUID = 2802988981431379828L;
+                        private static final long serialVersionUID = 2802988981431379828L;
 
-                    @Override
-                    public void onClick(final AjaxRequestTarget target, final RealmTO ignore) {
-                        onClickEdit(target, realmTO);
-                    }
-                }, ActionLink.ActionType.EDIT, IdRepoEntitlement.REALM_UPDATE).hideLabel();
+                        @Override
+                        public void onClick(final AjaxRequestTarget target, final RealmTO ignore) {
+                            onClickEdit(target, realmTO);
+                        }
+                    }, ActionLink.ActionType.EDIT, IdRepoEntitlement.REALM_UPDATE).hideLabel();
+                }
 
-                actionPanel.add(new ActionLink<>(realmTO) {
+                if (securityCheck(Set.of(IdRepoEntitlement.REALM_UPDATE))) {
+                    actionPanel.add(new ActionLink<>(realmTO) {
 
-                    private static final long serialVersionUID = 2802988981431379827L;
+                        private static final long serialVersionUID = 2802988981431379827L;
 
-                    @Override
-                    public void onClick(final AjaxRequestTarget target, final RealmTO ignore) {
-                        onClickTemplate(target);
-                    }
-                }, ActionLink.ActionType.TEMPLATE, IdRepoEntitlement.REALM_UPDATE).hideLabel();
+                        @Override
+                        public void onClick(final AjaxRequestTarget target, final RealmTO ignore) {
+                            onClickTemplate(target);
+                        }
+                    }, ActionLink.ActionType.TEMPLATE, IdRepoEntitlement.REALM_UPDATE).hideLabel();
+                }
 
-                actionPanel.add(new ActionLink<>(realmTO) {
+                if (securityCheck(Set.of(IdRepoEntitlement.REALM_DELETE))) {
+                    actionPanel.add(new ActionLink<>(realmTO) {
 
-                    private static final long serialVersionUID = 2802988981431379829L;
+                        private static final long serialVersionUID = 2802988981431379829L;
 
-                    @Override
-                    public void onClick(final AjaxRequestTarget target, final RealmTO ignore) {
-                        onClickDelete(target, realmTO);
-                    }
-                }, ActionLink.ActionType.DELETE, IdRepoEntitlement.REALM_DELETE, true).hideLabel();
+                        @Override
+                        public void onClick(final AjaxRequestTarget target, final RealmTO ignore) {
+                            onClickDelete(target, realmTO);
+                        }
+                    }, ActionLink.ActionType.DELETE, IdRepoEntitlement.REALM_DELETE, true).hideLabel();
+                }
             }
 
             RealmDetails panel = new RealmDetails(panelId, realmTO, actionPanel, false);
@@ -324,8 +335,12 @@ public abstract class Realm extends WizardMgtPanel<RealmTO> {
 
         @Override
         public boolean isVisible() {
-            return SyncopeWebApplication.get().getSecuritySettings().getAuthorizationStrategy().
-                    isActionAuthorized(this, RENDER);
+            return SyncopeWebApplication.get().getSecuritySettings().
+                    getAuthorizationStrategy().isActionAuthorized(this, RENDER);
+        }
+
+        private boolean securityCheck(final Set<String> entitlements) {
+            return entitlements.stream().anyMatch(e -> SyncopeConsoleSession.get().owns(e, realmTO.getFullPath()));
         }
     }
 }
