@@ -120,22 +120,22 @@ public class SyncopeClient {
     protected void init(final AuthenticationHandler authHandler) {
         cleanup();
 
-        if (authHandler instanceof AnonymousAuthenticationHandler) {
-            restClientFactory.setUsername(((AnonymousAuthenticationHandler) authHandler).getUsername());
-            restClientFactory.setPassword(((AnonymousAuthenticationHandler) authHandler).getPassword());
-        } else if (authHandler instanceof BasicAuthenticationHandler) {
-            restClientFactory.setUsername(((BasicAuthenticationHandler) authHandler).getUsername());
-            restClientFactory.setPassword(((BasicAuthenticationHandler) authHandler).getPassword());
+        if (authHandler instanceof final AnonymousAuthenticationHandler anonymousAuthenticationHandler) {
+            restClientFactory.setUsername(anonymousAuthenticationHandler.getUsername());
+            restClientFactory.setPassword(anonymousAuthenticationHandler.getPassword());
+        } else if (authHandler instanceof final BasicAuthenticationHandler basicAuthenticationHandler) {
+            restClientFactory.setUsername(basicAuthenticationHandler.getUsername());
+            restClientFactory.setPassword(basicAuthenticationHandler.getPassword());
 
             String jwt = getService(AccessTokenService.class).login().getHeaderString(RESTHeaders.TOKEN);
             restClientFactory.getHeaders().put(HttpHeaders.AUTHORIZATION, List.of("Bearer " + jwt));
 
             restClientFactory.setUsername(null);
             restClientFactory.setPassword(null);
-        } else if (authHandler instanceof JWTAuthenticationHandler) {
+        } else if (authHandler instanceof final JWTAuthenticationHandler jwtAuthenticationHandler) {
             restClientFactory.getHeaders().put(
                     HttpHeaders.AUTHORIZATION,
-                    List.of("Bearer " + ((JWTAuthenticationHandler) authHandler).getJwt()));
+                    List.of("Bearer " + jwtAuthenticationHandler.getJwt()));
         }
     }
 
@@ -255,7 +255,7 @@ public class SyncopeClient {
         List<String> headerValues = restClientFactory.getHeaders().get(HttpHeaders.AUTHORIZATION);
         String header = headerValues == null || headerValues.isEmpty()
                 ? null
-                : headerValues.get(0);
+                : headerValues.getFirst();
         if (header != null && header.startsWith("Bearer ")) {
             return header.substring("Bearer ".length());
 
@@ -272,7 +272,7 @@ public class SyncopeClient {
         List<String> headerValues = restClientFactory.getHeaders().get(RESTHeaders.DOMAIN);
         return headerValues == null || headerValues.isEmpty()
                 ? SyncopeConstants.MASTER_DOMAIN
-                : headerValues.get(0);
+                : headerValues.getFirst();
     }
 
     /**
