@@ -29,7 +29,6 @@ import java.util.UUID;
 import org.apache.syncope.common.lib.types.CipherAlgorithm;
 import org.apache.syncope.core.persistence.api.attrvalue.PlainAttrValidationManager;
 import org.apache.syncope.core.persistence.api.dao.AnyObjectDAO;
-import org.apache.syncope.core.persistence.api.dao.ApplicationDAO;
 import org.apache.syncope.core.persistence.api.dao.DelegationDAO;
 import org.apache.syncope.core.persistence.api.dao.DerSchemaDAO;
 import org.apache.syncope.core.persistence.api.dao.ExternalResourceDAO;
@@ -38,11 +37,10 @@ import org.apache.syncope.core.persistence.api.dao.PlainSchemaDAO;
 import org.apache.syncope.core.persistence.api.dao.RelationshipTypeDAO;
 import org.apache.syncope.core.persistence.api.dao.RoleDAO;
 import org.apache.syncope.core.persistence.api.dao.UserDAO;
-import org.apache.syncope.core.persistence.api.entity.AnyUtils;
 import org.apache.syncope.core.persistence.api.entity.Delegation;
 import org.apache.syncope.core.persistence.api.entity.DerSchema;
+import org.apache.syncope.core.persistence.api.entity.PlainAttr;
 import org.apache.syncope.core.persistence.api.entity.Role;
-import org.apache.syncope.core.persistence.api.entity.user.LAPlainAttr;
 import org.apache.syncope.core.persistence.api.entity.user.LinkedAccount;
 import org.apache.syncope.core.persistence.api.entity.user.UMembership;
 import org.apache.syncope.core.persistence.api.entity.user.URelationship;
@@ -79,9 +77,6 @@ public class UserTest extends AbstractTest {
     private ExternalResourceDAO resourceDAO;
 
     @Autowired
-    private ApplicationDAO applicationDAO;
-
-    @Autowired
     private DelegationDAO delegationDAO;
 
     @Autowired
@@ -112,9 +107,9 @@ public class UserTest extends AbstractTest {
     public void ships() {
         User user = userDAO.findByUsername("bellini").orElseThrow();
         assertEquals(1, user.getMemberships().size());
-        assertEquals("bf825fe1-7320-4a54-bd64-143b5c18ab97", user.getMemberships().get(0).getRightEnd().getKey());
+        assertEquals("bf825fe1-7320-4a54-bd64-143b5c18ab97", user.getMemberships().getFirst().getRightEnd().getKey());
 
-        user.remove(user.getMemberships().get(0));
+        user.remove(user.getMemberships().getFirst());
 
         UMembership newM = entityFactory.newEntity(UMembership.class);
         newM.setLeftEnd(user);
@@ -125,11 +120,11 @@ public class UserTest extends AbstractTest {
 
         user = userDAO.findByUsername("bellini").orElseThrow();
         assertEquals(1, user.getMemberships().size());
-        assertEquals("ba9ed509-b1f5-48ab-a334-c8530a6422dc", user.getMemberships().get(0).getRightEnd().getKey());
+        assertEquals("ba9ed509-b1f5-48ab-a334-c8530a6422dc", user.getMemberships().getFirst().getRightEnd().getKey());
         assertEquals(1, user.getRelationships().size());
-        assertEquals("fc6dbc3a-6c07-4965-8781-921e7401a4a5", user.getRelationships().get(0).getRightEnd().getKey());
+        assertEquals("fc6dbc3a-6c07-4965-8781-921e7401a4a5", user.getRelationships().getFirst().getRightEnd().getKey());
 
-        user.getRelationships().remove(0);
+        user.getRelationships().removeFirst();
 
         URelationship newR = entityFactory.newEntity(URelationship.class);
         newR.setType(relationshipTypeDAO.findById("neighborhood").orElseThrow());
@@ -141,7 +136,7 @@ public class UserTest extends AbstractTest {
 
         user = userDAO.findByUsername("bellini").orElseThrow();
         assertEquals(1, user.getRelationships().size());
-        assertEquals("8559d14d-58c2-46eb-a2d4-a7d35161e8f8", user.getRelationships().get(0).getRightEnd().getKey());
+        assertEquals("8559d14d-58c2-46eb-a2d4-a7d35161e8f8", user.getRelationships().getFirst().getRightEnd().getKey());
     }
 
     private LinkedAccount newLinkedAccount(final String connObjectKeyValue) {
@@ -154,26 +149,21 @@ public class UserTest extends AbstractTest {
 
         account.setConnObjectKeyValue(connObjectKeyValue);
         account.setResource(resourceDAO.findById("resource-ldap").orElseThrow());
-        account.add(applicationDAO.findPrivilege("getMighty").orElseThrow());
 
         account.setUsername(UUID.randomUUID().toString());
         account.setCipherAlgorithm(CipherAlgorithm.AES);
         account.setPassword("Password123");
 
-        AnyUtils anyUtils = anyUtilsFactory.getLinkedAccountInstance();
-
-        LAPlainAttr attr = anyUtils.newPlainAttr();
-        attr.setOwner(user);
-        attr.setAccount(account);
-        attr.setSchema(plainSchemaDAO.findById("obscure").orElseThrow());
-        attr.add(validator, "testvalue", anyUtils);
+        PlainAttr attr = new PlainAttr();
+        attr.setSchema("obscure");
+        attr.add(validator, "testvalue");
         account.add(attr);
 
         user = userDAO.save(user);
 
         assertEquals(1, user.getLinkedAccounts().size());
 
-        return user.getLinkedAccounts().get(0);
+        return user.getLinkedAccounts().getFirst();
     }
 
     @Test
@@ -182,7 +172,7 @@ public class UserTest extends AbstractTest {
         assertNotNull(account.getKey());
         assertEquals(1, account.getPlainAttrs().size());
         assertTrue(account.getPlainAttr("obscure").isPresent());
-        assertEquals(account.getOwner(), account.getPlainAttr("obscure").get().getOwner());
+        assertEquals("vivaldi", account.getOwner().getUsername());
 
         assertTrue(userDAO.linkedAccountExists(account.getOwner().getKey(), account.getConnObjectKeyValue()));
 
@@ -193,12 +183,7 @@ public class UserTest extends AbstractTest {
         List<LinkedAccount> accounts = userDAO.findLinkedAccountsByResource(
                 resourceDAO.findById("resource-ldap").orElseThrow());
         assertEquals(1, accounts.size());
-        assertEquals(account, accounts.get(0));
-
-        accounts = userDAO.findLinkedAccountsByPrivilege(
-                applicationDAO.findPrivilege("getMighty").orElseThrow());
-        assertEquals(1, accounts.size());
-        assertEquals(account, accounts.get(0));
+        assertEquals(account, accounts.getFirst());
     }
 
     @Test
@@ -260,7 +245,7 @@ public class UserTest extends AbstractTest {
         // add derived attributes to user
         User owner = userDAO.findByUsername("vivaldi").orElseThrow();
 
-        String firstname = owner.getPlainAttr("firstname").get().getValuesAsStrings().iterator().next();
+        String firstname = owner.getPlainAttr("firstname").get().getValuesAsStrings().getFirst();
         assertNotNull(firstname);
 
         // search by ksuffix derived attribute
