@@ -94,7 +94,7 @@ public class LDAPMembershipPullActions implements InboundActions {
         return connector.getConnInstance().getConf().stream().
                 filter(property -> "groupMemberAttribute".equals(property.getSchema().getName())
                 && !property.getValues().isEmpty()).findFirst().
-                map(groupMembership -> (String) groupMembership.getValues().get(0)).
+                map(groupMembership -> (String) groupMembership.getValues().getFirst()).
                 orElse("uniquemember");
     }
 
@@ -214,7 +214,7 @@ public class LDAPMembershipPullActions implements InboundActions {
             userUR.setKey(user);
             updateReqs.add(userUR);
 
-            groups.stream().forEach(group -> {
+            groups.forEach(group -> {
                 Set<String> before = membershipsBefore.get(user);
                 if (before == null || !before.contains(group)) {
                     userUR.getMemberships().add(new MembershipUR.Builder(group).
